k8s/flux-playground/traefik-minikube/podinfo/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`podinfo.traefik.minikube`)
      services:
        - kind: Service
          name: podinfo
          port: 9898
